# flextag

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
benchmarks/: performance_test.py
demo/: README.md  demo.py
demo/01_jokegen/: README.md  joke_generator.py
demo/dev/: demo.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6.py  ff.py
dev/docs/: README.md  README_SUMMARY.md  flextag_reference_system.md  flextag_specification.md  format_specification.md  future_data_types.md  future_encoding.md  implementation_guide.md  new_schema_prams.md  potential_usage.md  sales_pitch.md  types_specification.md
dev/parser/: README.md  full_load_speed_test.py  line_by_line_speed_test.py  parser_speed_comparison_benchmark.py
docs/: file_structure.md  filtering_0_3_1.md  flextag_parameter_filtering.md  flextag_technical_specification.md  search_algorithm_implementation_steps.md
docs/example_use/: recipe_collection.md
flextag/: __init__.py  exceptions.py  flextag.py  json.py  logger.py  parser.py  serializer.py  settings.py
flextag/_dev/: test_parser.ipynb
flextag/core/: __init__.py  compression.py  containers.py  factory.py  highlighter.py
flextag/demo/: basic_search_demo.py  combined_search_demo.py  demo.py  multi_container_demo.py  section_search_demo.py  tech_domo.py  ui_demo.py
flextag/docs/: flextag_parser_implementation.md  project_structure.md  query.md  structure.md
flextag/managers/: README.md  __init__.py  base.py  data.py  query.py  transport.py
flextag/ui/: debugger.py  tech_demo.py
src/flextag/: __init__.py  example_usage.py  flextag.py
tests/: test_content.py  test_document.py  test_flextag.py  test_integration.py  test_managers.py  test_parser.py  test_parsers.py  test_search.py  test_section.py  test_structure.py  test_types.py  text_query.py
tests/notebooks/: 00_structure.ipynb  02_content.ipynb  03_query.ipynb
tests2/: test_compression.py  test_managers.py
(+83 files in other folders)
